--- a/CLV_Capstone_Project.ipynb
+++ b/CLV_Capstone_Project.ipynb
@@ -286,7 +286,7 @@
     "# STEP 4: Connect to PostgreSQL\n",
     "# Replace values below with your actual PostgreSQL config\n",
     "db_user = 'postgres'\n",
-    "db_password = 'Kiptoo.4418'\n",
+    "db_password = 'xxxxxx'\n",
     "db_host = 'localhost'\n",
     "db_port = '5432'\n",
     "db_name = 'customers'\n",
